# project

./: CMakeLists.txt  Command.cpp  Command.h  CommonInterface.cpp  CommonInterface.h  ConsoleInterface.cpp  ConsoleInterface.h  GameSession.cpp  GameSession.h  README.md  RegistrationSystem.cpp  RegistrationSystem.h  Registration_system.cpp  Registration_system.h  board.cpp  board.h  ceil.cpp  ceil.h  coordinates.cpp  coordinates.h  description.txt  main.cpp  mark.h  player.cpp  player.h  player_data.cpp  player_data.h  ship.cpp  ship.h  square.cpp  square.h
